--- a/CreditCardCustomer.ipynb
+++ b/CreditCardCustomer.ipynb
@@ -1,3 +1,11 @@
+{
+      "cell_type": "markdown",
+      "metadata": {
+	@@ -816,4 +804,4 @@
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}    
     {
       "cell_type": "markdown",
       "metadata": {
